# Hermes

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: hermes_entry.py  hermes_entry.spec  pyproject.toml  requirements.txt
backend/hermes/: __init__.py  config.py  main.py
backend/hermes/agents/: __init__.py  pythia.py
backend/hermes/agents/argos/: __init__.py  base.py  boamp.py  filtre.py  playwright_auth.py  registry.py  runner.py  scheduler.py
backend/hermes/agents/hermion/: __init__.py  writer.py
backend/hermes/agents/krinos/: __init__.py  analyzer.py  downloader.py  extractor.py  ponderation.py
backend/hermes/api/: appels_offre.py  argos.py  health.py  hermion.py  krinos.py  pythia.py
backend/hermes/db/: __init__.py  models.py  session.py
backend/hermes/securite/: __init__.py  credentials.py
backend/tests/: conftest.py  test_appels_offre_api.py  test_argos_api.py  test_argos_filtre.py  test_argos_parser.py  test_argos_runner.py  test_credentials.py  test_hermion.py  test_krinos_analyzer.py  test_krinos_extractor.py  test_krinos_ponderation.py  test_pythia_modele.py  test_smoke.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/electron/: main.cjs
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
installer/: HERMES.iss  README.md
scripts/: build-backend.ps1  build-installer.ps1  kill-hermes.ps1  start-backend.ps1  start-desktop.ps1  start-hermes.ps1  start-prototype.ps1  start-pythia.ps1
(+32 files in other folders)
